--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     la funcionalidad de nuestra aplicacion, por ultimo corriengo las entradas como
                     r = 3 ya lo mostraria en su categoria.
                 </p>
-                <img src="./img/txtPrueba.png" alt="txtPrueba">
+                <img src="./img/corrigiendo.png" alt="txtPrueba">
                 <img src="./img/Imagen-1.png" alt="ImagenPanelPrincipal">
                 <img src="./img/c1.png" alt="foto1Simbolos">
                 <img src="./img/c2.png" alt="foto2Simbolos">
@@ -77,7 +77,7 @@
                     dando la posibilidad al usuario de hacerlo, Hacer correcion del taller 1 , Desarrollar una tabla de
                     tokens (Lexema,Token,idToken) , Identificar expresiones aritmeticas y una opcion de salir.
                 </p>
-                <img src="./img/txtPrueba.png" alt="txtPrueba">
+                <img src="./img/corrigiendo.png" alt="txtPrueba">
                 <img src="./img/Imagen-1.png" alt="ImagenPanelPrincipal">
                 <img src="./img/panelRutas.png" alt="panelRutas">
                 <img src="./img/tablaTokens.png" alt="tablaTokens">
