--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=wPg9DYNVHuY#gsc.tab=0"
+    <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=wPg9DYNVHuY#gsc.tab=0"
         allowfullscreen></iframe>
     <title>WebLenguajesEntrega2</title>
 </head>
@@ -40,7 +40,7 @@
                 <i class="fa-solid fa-seedling" data-fa-transform="flip-v" style="background:MistyRose"></i>
                 <i class="fa-solid fa-seedling" data-fa-transform="flip-h" style="background:MistyRose"></i>
                 <i class="fa-solid fa-seedling" data-fa-transform="flip-v flip-h" style="background:MistyRose"></i>
-                <h1>Entrega Taller 1 Corregida: </h1>
+                <h1>Entrega Taller 1: </h1>
                 <p style="word-spacing: 10px; margin-bottom: 5px;">En esta correcion, hacemos entrega de la
                     funcionalidad de la aplicacion,
                     Agregando a nuestra tabla de simbolos los comentarios, corriegiendo la
@@ -72,11 +72,15 @@
                 <i class="fa-solid fa-seedling" data-fa-transform="flip-v" style="background:MistyRose"></i>
                 <i class="fa-solid fa-seedling" data-fa-transform="flip-h" style="background:MistyRose"></i>
                 <i class="fa-solid fa-seedling" data-fa-transform="flip-v flip-h" style="background:MistyRose"></i>
-                <h1>Entrega Taller 2: </h1>
-                <p style="word-spacing: 10px; margin-bottom: 53px; ">En esta entrega se busca cargar un archivo plano
-                    dando la posibilidad al usuario de hacerlo, Hacer correcion del taller 1 , Desarrollar una tabla de
-                    tokens (Lexema,Token,idToken) , Identificar expresiones aritmeticas y una opcion de salir.
+                <h1>Entrega Taller 2 Corregida: </h1>
+                <p style="word-spacing: 10px; margin-bottom: 53px; ">En esta correccion de la entrega dos lo que
+                    buscamos es agregar a nuestro fichero de tokens el identificador de tipo variable y constante
+                    ya que fue la sugerencia del profesor para corregirlo en la entrega del taller numero 3.
                 </p>
+                <img src="./img/Imagen-2-Correcion-1.png" alt="corrigiendo-2-1">
+                <img src="./img/Imagen-2-Correcion-2.png" alt="corrigiendo-2-2">
+                <img src="./img/Imagen-2-Correcion-3.png" alt="corrigiendo-2-3">
+                <img src="./img/Imagen-2-Correcion-4.png" alt="corrigiendo-2-4">
                 <img src="./img/corrigiendo.png" alt="txtPrueba">
                 <img src="./img/Imagen-1.png" alt="ImagenPanelPrincipal">
                 <img src="./img/panelRutas.png" alt="panelRutas">
@@ -84,10 +88,38 @@
                 <img src="./img/tablaAritmeticos.png" alt="tablaAritmeticos">
                 <img src="./img/botonSalir.png" alt="botonSalir">
                 <img src="./img/foto1Codigo.png" alt="foto1Codigo">
-                <img src="./img/foto2Codigo.png" alt="foto2Codigo">
-                <img src="./img/fotoFicheros.png" alt="fotoFichero">
-                <img src="./img/base5.png" alt="base5">
-                <img src="./img/Excepciones.png" alt="excepciones">
+                <img src="./img/java.jpg" alt="java">
+
+            </div>
+
+            <div>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-90" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-180" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-270" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-30" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate--30" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="flip-v" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="flip-h" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="flip-v flip-h" style="background:MistyRose"></i>
+                <h1>Entrega Taller 3: </h1>
+                <p style="word-spacing: 10px; margin-bottom: 5px;">En esta entrega numero tres nos enfocamos en entregar
+                    una gramatica libre de contexto que reconozca nuestras operacioes aritmeticas , ademas de corregir
+                    la
+                    entrega del taller 2 agregando identificador de tipo variable y constante. Con este desarrollo web
+                    buscamos
+                    agregar todo el funcionamiento de nuestra aplicacion paso a paso del taller 1, 2, 3.
+                </p>
+                <img src="./img/Imagen-2-Correcion-1.png" alt="imagen-1">
+                <img src="./img/Talle-3-1.png" alt="Talle3-1">
+                <img src="./img/Talle-3-2.png" alt="Talle3-2">
+                <img src="./img/Talle-3-3.png" alt="Talle3-3">
+                <img src="./img/Talle-3-4.png" alt="Talle3-4">
+                <img src="./img/Talle-3-5.png" alt="Talle3-5">
+                <img src="./img/Talle-3-6.png" alt="Talle3-6">
+                <img src="./img/Talle-3-7.png" alt="Talle3-7">
+                <img src="./img/Talle-3-8.png" alt="Talle3-8">
+                <img src="./img/Talle-3-9.png" alt="Talle3-9">
+                <img src="./img/botonSalir.png" alt="botonSalir">
                 <img src="./img/java.jpg" alt="java">
 
             </div>
