--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <img src="./img/c7.png" alt="foto7Simbolos">
                 <img src="./img/c8.png" alt="foto8Simbolos">
                 <img src="./img/c10.png" alt="foto10Simbolos">
-                <img src="./img/rutasTaller1.png" alt="rutas">
+                <img src="./img/Talle-3-10.png" alt="rutas">
 
             </div>
 
