--- a/index.html
+++ b/index.html
@@ -123,6 +123,38 @@
                 <img src="./img/java.jpg" alt="java">
 
             </div>
+
+            <div>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-90" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-180" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-270" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate-30" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="rotate--30" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="flip-v" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="flip-h" style="background:MistyRose"></i>
+                <i class="fa-solid fa-seedling" data-fa-transform="flip-v flip-h" style="background:MistyRose"></i>
+                <h1>Entrega Taller 4: </h1>
+                <p style="word-spacing: 10px; margin-bottom: 5px;">En esta entrega numero cuatro nos enfocamos en
+                    entregar
+                    el funcionamiento de la notacion Prefijo y Postfijo de nuestra gramatica libre de contexto dando
+                    enfoque
+                    a las operaciones aritmeticas del mismo en esta notacion y
+                    agregar todo el funcionamiento de nuestra aplicacion paso a paso del taller 1, 2, 3, 4.
+                </p>
+                <img src="./img/imagen2_Taller4.png" alt="Taller4-1">
+                <img src="./img/imagen1_Taller4.png" alt="Talle4-2">
+                <img src="./img/imagen3_Taller4.png" alt="Talle4-3">
+                <img src="./img/imagen4_Taller4.png" alt="Talle4-4">
+                <img src="./img/imagen5_Taller4.png" alt="Talle4-5">
+                <img src="./img/imagen6_Taller4.png" alt="Talle4-6">
+                <img src="./img/imagen7_Taller4.png" alt="Talle3-6">
+                <img src="./img/imagen8_Taller4.png" alt="Talle3-7">
+                <img src="./img/imagen9_Taller4.png" alt="Talle3-8">
+                <img src="./img/imagen10_Taller4.png" alt="Talle3-9">
+                <img src="./img/botonSalir.png" alt="botonSalir">
+                <img src="./img/java.jpg" alt="java">
+
+            </div>
         </section>
     </main>
 
